--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,15 @@
   <meta charset="utf-8">
   <title>MeuTcc</title>
   <base href="/">
-
+  <link rel="stylesheet" type="text/css" href="../assets/jchartfx/css/jchartfx.attributes.metal.css"/>
+  <link rel="stylesheet" type="text/css" href="../assets/jchartfx/css/jchartfx.palette.mocha.css"/>				
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-   <script src="https://www.gstatic.com/charts/loader.js"></script>
-  <script type="text/javascript">
-    // Load the Visualization API and the corechart package.
-    google.charts.load('current', {'packages':['corechart']});
- </script>
-  
 </head>
 <body>
+  <script type="text/javascript" src="../assets/jchartfx/js/jchartfx.system.js"></script> 
+  <script type="text/javascript" src="../assets/jchartfx/js/jchartfx.coreBasic.js"></script> 
+  <script type="text/javascript" src="../assets/jchartfx/js/jchartfx.advanced.js"></script>
   <app-root>Loading...</app-root>
 </body>
 </html>
