troca do estilo gráfico de financiamento

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>MeuTcc</title>
   <base href="/">
   <link rel="stylesheet" type="text/css" href="../assets/jchartfx/css/jchartfx.attributes.metal.css"/>
-  <link rel="stylesheet" type="text/css" href="../assets/jchartfx/css/jchartfx.palette.mocha.css"/>				
+    <link rel="stylesheet" type="text/css" href="../assets/jchartfx/css/jchartfx.palette.aurora.css"/>				
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
