--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
   <script type="text/javascript" src="../assets/jchartfx/js/jchartfx.system.js"></script> 
   <script type="text/javascript" src="../assets/jchartfx/js/jchartfx.coreVector.js"></script> 
   <script type="text/javascript" src="../assets/jchartfx/js/jchartfx.advanced.js"></script>
+  <script type="text/javascript" src="../assets/jchartfx/js/jchartfx.animation.js"></script>
   <app-root>Loading...</app-root>
 </body>
 </html>
