Including library to support 3D charts

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
   <script type="text/javascript" src="../assets/jchartfx/js/jchartfx.coreVector.js"></script> 
   <script type="text/javascript" src="../assets/jchartfx/js/jchartfx.advanced.js"></script>
   <script type="text/javascript" src="../assets/jchartfx/js/jchartfx.animation.js"></script>
+  <script type="text/javascript" src="../assets/jchartfx/js/jchartfx.coreVector3d.js"></script>
   <app-root>Loading...</app-root>
 </body>
 </html>
