Change the application title to sim-imoveis

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>MeuTcc</title>
+  <title>Sim Imóveis</title>
   <base href="/">
   <link rel="stylesheet" type="text/css" href="../assets/jchartfx/css/jchartfx.palette.aurora.css"/>
   <link rel="stylesheet" type="text/css" href="../assets/jchartfx/css/jchartfx.attributes.metal.css"/>
