--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <title>Sim Imóveis</title>
   <base href="/">
-  <link rel="stylesheet" type="text/css" href="../assets/jchartfx/css/jchartfx.palette.aurora.css"/>
-  <link rel="stylesheet" type="text/css" href="../assets/jchartfx/css/jchartfx.attributes.metal.css"/>
+  <link rel="stylesheet" type="text/css" href="../assets/jchartfx/css/jchartfx.palette.colorful.css"/>
+  <link rel="stylesheet" type="text/css" href="../assets/jchartfx/css/jchartfx.attributes.material.css"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
@@ -14,7 +14,7 @@
   <script type="text/javascript" src="../assets/jchartfx/js/jchartfx.coreVector.js"></script> 
   <script type="text/javascript" src="../assets/jchartfx/js/jchartfx.advanced.js"></script>
   <script type="text/javascript" src="../assets/jchartfx/js/jchartfx.animation.js"></script>
-  <script type="text/javascript" src="../assets/jchartfx/js/jchartfx.coreVector3d.js"></script>
+  <script type="text/javascript" src="../assets/jchartfx/js/jchartfx.motif.material.js"></script>
   <app-root>Loading...</app-root>
 </body>
 </html>
