--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,10 @@
   <meta charset="utf-8">
   <title>Sim Imóveis</title>
   <base href="/">
-  <link rel="stylesheet" type="text/css" href="../assets/jchartfx/css/jchartfx.palette.colorful.css"/>
-  <link rel="stylesheet" type="text/css" href="../assets/jchartfx/css/jchartfx.attributes.material.css"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <script type="text/javascript" src="../assets/jchartfx/js/jchartfx.system.js"></script> 
-  <script type="text/javascript" src="../assets/jchartfx/js/jchartfx.coreVector.js"></script> 
-  <script type="text/javascript" src="../assets/jchartfx/js/jchartfx.advanced.js"></script>
-  <script type="text/javascript" src="../assets/jchartfx/js/jchartfx.animation.js"></script>
-  <script type="text/javascript" src="../assets/jchartfx/js/jchartfx.motif.material.js"></script>
-  <app-root>Loading...</app-root>
+  <app-root>Iniciando...</app-root>
 </body>
 </html>
